@@ -1,5 +1,5 @@
 /*
- * "$Id: configh.in,v 1.11.2.7 2001/01/22 15:13:37 easysw Exp $"
+ * "$Id: configh.in,v 1.11.2.8 2001/02/12 15:12:14 easysw Exp $"
  *
  * Configuration file for the Fast Light Tool Kit (FLTK).
  * @configure_input@
@@ -140,6 +140,7 @@
  * String functions...
  */
 
+#define HAVE_STRINGS_H 0
 #define HAVE_STRCASECMP 0
 
 /*
@@ -159,5 +160,5 @@
 #define USE_POLL 0
 
 /*
- * End of "$Id: configh.in,v 1.11.2.7 2001/01/22 15:13:37 easysw Exp $".
+ * End of "$Id: configh.in,v 1.11.2.8 2001/02/12 15:12:14 easysw Exp $".
  */
