@@ -1,5 +1,5 @@
 #
-# "$Id: makeinclude.in,v 1.7.2.8 2001/01/22 15:13:37 easysw Exp $"
+# "$Id: makeinclude.in,v 1.7.2.9 2001/02/12 15:12:14 easysw Exp $"
 #
 # Make include file for the Fast Light Tool Kit (FLTK).
 # @configure_input@
@@ -27,10 +27,16 @@
 prefix		=@prefix@
 exec_prefix	=@exec_prefix@
 bindir		=@bindir@
+datadir		=@datadir@
 includedir	=@includedir@
 libdir		=@libdir@
+mandir		=@mandir@
 srcdir		=@srcdir@
 VPATH		=@srcdir@
+
+# programs we use...
+HTMLDOC		=@HTMLDOC@
+NROFF		=@NROFF@
 
 # compiler names:
 CXX		=@CXX@
@@ -56,7 +62,7 @@ GLDLIBS		=@LDFLAGS@ @LIBS@ @GLLIB@ -lX11 -lXext @X_EXTRA_LIBS@ -lm
 .SILENT:
 
 # Build commands and filename extensions...
-.SUFFIXES:	.c .cxx .h .fl .o
+.SUFFIXES:	.0 .1 .3 .c .cxx .h .fl .man .o .z
 
 .cxx:
 	echo Compiling and linking $@...
@@ -70,6 +76,18 @@ GLDLIBS		=@LDFLAGS@ @LIBS@ @GLLIB@ -lX11 -lXext @X_EXTRA_LIBS@ -lm
 	echo Compiling $@...
 	$(CXX) -I.. $(CXXFLAGS) -c $<
 
+.man.0 .man.1 .man.3:
+	echo Formatting $<...
+	$(RM) $@
+	$(NROFF) -man $< >$@
+
+.man.z:
+	echo Formatting $<...
+	$(RM) $@ t.z
+	$(NROFF) -man $< >t
+	pack -f t
+	$(MV) t.z $@
+
 #
-# End of "$Id: makeinclude.in,v 1.7.2.8 2001/01/22 15:13:37 easysw Exp $".
+# End of "$Id: makeinclude.in,v 1.7.2.9 2001/02/12 15:12:14 easysw Exp $".
 #
